DBC22-3933: Fixed map filters on mobile landscape mode

--- a/src/frontend/src/Components/map/filter/FilterTabs.scss
+++ b/src/frontend/src/Components/map/filter/FilterTabs.scss
@@ -22,20 +22,27 @@ button.btn.open-filters {
   box-shadow: 0px 1.937px 4.358px 0px rgba(0, 0, 0, 0.13), 0px 0.363px 1.089px 0px rgba(0, 0, 0, 0.10);
   display: flex;
   flex-direction: column;
-  height: calc(80vh - 32px);
+  height: fit-content;
 
   &.closed {
     display: contents;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: 576px) {
     position: absolute;
     top: 1rem;
     bottom: initial;
     left: initial;
     right: 1rem;
     width: 300px;
-    height: fit-content;
+  }
+
+  @media (orientation: landscape) {
+    position: fixed;
+    top: initial;
+    bottom: 0;
+    left: 0;
+    width: 100%;
   }
 
   .tabs-container {
@@ -53,6 +60,7 @@ button.btn.open-filters {
       overflow: auto;
       border-bottom-left-radius: 4px;
       border-bottom-right-radius: 4px;
+      height: 100%;
 
       .tab-pane > div {
         height: calc(100vh - 222px);
